@@ -1,3 +1,8 @@
+2014-05-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
+	* soap-client.el (soap-decode-xs-attributes): Decode basic-type
+	attributes.
+
 2014-05-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-get-xs-attributes-from-groups): renamed
